added skip-to-content button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">    
 </head>
 <body>
+    <a href="#" class="btn skip-btn">Skip to Content</a>
     <header>
         <img src="./assets/images/logo.svg" alt="Clipboard" aria-label="Home-Clipboard" class="header__logo">
         <div class="header__content">
