--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">    
 </head>
 <body>
-    <a href="#" class="btn skip-btn">Skip to Content</a>
+    <a href="#main-content" class="btn skip-btn">Skip to Content</a>
     <header>
         <img src="./assets/images/logo.svg" alt="Clipboard" aria-label="Home-Clipboard" class="header__logo">
         <div class="header__content">
@@ -26,7 +26,7 @@
             <a href="#" class="btn btn--blue header__btn">Download for Mac</a>
         </div>
     </header>
-    <main>
+    <main id="main-content">
         <section class="section-container section-container-one features">
             <div class="features__intro">
                 <h2 class="features__intro-title">
