--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 A history of everything you copy
             </h1>
             <p class="header__paragraph">
-                lipboard allows you to track and organize everything you 
+                Clipboard allows you to track and organize everything you 
                 copy. Instantly access your clipboard on all your devices.
             </p>
         </div>
@@ -159,7 +159,7 @@
         </section>
     </main>
     <footer class="footer">
-        <h2 class="sr-only">A Footer containing site links and informations</h2>
+        <h2 class="sr-only">A Footer containing site links and information</h2>
         <section class="footer__wrapper">
             <img src="./assets/images/logo.svg" alt="" class="footer__logo">
             <nav class="footer__nav">
