--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">    
 </head>
 <body>
-    <a href="#main-content" class="btn skip-btn">Skip to Content</a>
-    <header>
+    <!-- <a href="#main-content" class="btn skip-btn">Skip to Content</a> -->
+    <header class="header">
         <img src="./assets/images/logo.svg" alt="Clipboard" aria-label="Home-Clipboard" class="header__logo">
         <div class="header__content">
             <h1 class="header__title">
@@ -30,131 +30,131 @@
         </div>
     </header>
     <main id="main-content">
-        <section class="section-container section-container-one features">
-            <div class="features__intro">
-                <h2 class="features__intro-title">
+        <section class="section section-one section-features">
+            <div class="section-features__intro">
+                <h2 class="section__title">
                     Keep track of your snippets
                 </h2>
-                <p class="features__intro-paragraph">
+                <p class="section__paragraph">
                     Clipboard instantly stores any item you copy in the cloud, 
                     meaning you can access your snippets immediately on all your 
                     devices. Our Mac and iOS apps will help you organize everything.
                 </p>
             </div>
-            <div class="features__content">
-                <img src="./assets/images/image-computer.png" alt="" class="features__image">
-                <ul class="features__list">
-                    <li class="features__listitem">
-                        <h3 class="features__listitem-title">
+            <div class="section-features__content">
+                <img src="./assets/images/image-computer.png" alt="" class="section-features__image">
+                <ul class="section-features__list">
+                    <li>
+                        <h3 class="section-features__list-title">
                             Quick Search
                         </h3>
-                        <p class="features__listitem-paragraph">
+                        <p class="section-features__list-paragraph">
                             Easily search your snippets by content, category, web address, application, and more.
                         </p>
                     </li>
-                    <li class="features__listitem">
-                        <h3 class="features__listitem-title">
+                    <li>
+                        <h3 class="section-features__list-title">
                             iCloud Sync
                         </h3>
-                        <p class="features__listitem-paragraph">
+                        <p class="section-features__list-paragraph">
                             Instantly saves and syncs snippets across all your devices.
                         </p>
                     </li>
-                    <li class="features__listitem">
-                        <h3 class="features__listitem-title">
+                    <li>
+                        <h3 class="section-features__list-title">
                             Complete History
                         </h3>
-                        <p class="features__listitem-paragraph">
+                        <p class="section-features__list-paragraph">
                             Retrieve any snippets from the first moment you started using the app.
                         </p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section-container section-container-two">
-            <div class="section-container-two__content">
-                <h2 class="section-container-two__content-title">
+        <section class="section section-two">
+            <div class="section-two__content">
+                <h2 class="section__title">
                     Access Clipboard anywhere
                 </h2>
-                <p class="section-container-two__content-paragraph">
+                <p class="section__paragraph">
                     Whether you’re on the go, or at your computer, you can access all your Clipboard 
                     snippets in a few simple clicks.
                 </p>
             </div>
-            <img src="./assets/images/image-devices.png" alt="" class="section-container-two__image">
+            <img src="./assets/images/image-devices.png" alt="" class="section-two__image">
         </section>
-        <section class="section-container section-container-three extras">
-            <div class="extras__intro">
-                <h2 class="extras__title">
+        <section class="section section-three section-extras">
+            <div class="section-extras__intro">
+                <h2 class="section__title">
                     Supercharge your workflow
                 </h2>
-                <p class="extras__paragraph">
+                <p class="section__paragraph">
                     We’ve got the tools to boost your productivity.
                 </p>
             </div>
-            <ul class="extras__list">
-                <li class="extras__listitem">
-                    <img src="./assets/images/icon-blacklist.svg" alt="" class="extras__listitem-icon">
-                    <h3 class="extras__listitem-title">
+            <ul class="section-extras__list">
+                <li class="section-extras__listitem">
+                    <img src="./assets/images/icon-blacklist.svg" alt="" class="section-extras__listitem-icon">
+                    <h3 class="section-extras__listitem-title">
                         Create blacklists
                     </h3>
-                    <p class="extras__listitem-paragraph">
+                    <p class="section-extras__listitem-paragraph">
                         Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
                     </p>
                 </li>
-                <li class="extras__listitem">
-                    <img src="./assets/images/icon-text.svg" alt="" class="extras__listitem-icon">
-                    <h3 class="extras__listitem-title">
+                <li class="section-extras__listitem">
+                    <img src="./assets/images/icon-text.svg" alt="" class="section-extras__listitem-icon">
+                    <h3 class="section-extras__listitem-title">
                         Plain text snippets
                     </h3>
-                    <p class="extras__listitem-paragraph">
+                    <p class="section-extras__listitem-paragraph">
                         Remove unwanted formatting from copied text for a consistent look.
                     </p>
                 </li>
-                <li class="extras__listitem">
-                    <img src="./assets/images/icon-preview.svg" alt="" class="extras__listitem-icon">
-                    <h3 class="extras__listitem-title">
+                <li class="section-extras__listitem">
+                    <img src="./assets/images/icon-preview.svg" alt="" class="section-extras__listitem-icon">
+                    <h3 class="section-extras__listitem-title">
                         Sneak preview
                     </h3>
-                    <p class="extras__listitem-paragraph">
+                    <p class="section-extras__listitem-paragraph">
                         Quick preview of all snippets on your Clipboard for easy access.
                     </p>
                 </li>
             </ul>
         </section>
-        <section class="section-container section-container-four partners">
+        <section class="section section-four section-partners">
             <h2 class="sr-only">Clipboard Partner Companies</h2>
-            <ul class="partners__list">
-                <li class="partners__listitem">
-                    <img src="./assets/images/logo-google.png" alt="" class="partners__logo">
+            <ul class="section-partners__list">
+                <li>
+                    <img src="./assets/images/logo-google.png" alt="" class="section-partners__logo section-partners__logo-one">
                 </li>
-                <li class="partners__listitem">
-                    <img src="./assets/images/logo-ibm.png" alt="" class="partners__logo">
+                <li>
+                    <img src="./assets/images/logo-ibm.png" alt="" class="section-partners__logo section-partners__logo-two">
                 </li>
-                <li class="partners__listitem">
-                    <img src="./assets/images/logo-microsoft.png" alt="" class="partners__logo">
+                <li>
+                    <img src="./assets/images/logo-microsoft.png" alt="" class="section-partners__logo section-partners__logo-three">
                 </li>
-                <li class="partners__listitem">
-                    <img src="./assets/images/logo-hp.png" alt="" class="partners__logo">
+                <li>
+                    <img src="./assets/images/logo-hp.png" alt="" class="section-partners__logo section-partners__logo-four">
                 </li>
-                <li class="partners__listitem">
-                    <img src="./assets/images/logo-vector-graphics.png" alt="" class="partners__logo">
+                <li>
+                    <img src="./assets/images/logo-vector-graphics.png" alt="" class="section-partners__logo section-partners__logo-five">
                 </li>
             </ul>
         </section>
-        <section class="section-container section-container-five">
-            <div class="section-container-five__content">
-                <h2 class="section-container-five__title">
+        <section class="section section-five">
+            <div class="section-five__content">
+                <h2 class="section__title">
                     Clipboard for iOS and Mac OS
                 </h2>
-                <p class="section-container-five__paragraph">
+                <p class="section__paragraph">
                     Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
                     and you’re ready to start adding to your clipboard.
                 </p>
             </div>
-            <div class="section-container-five__btns-container">
-                <a href="" class="btn btn--green section-container-five__btn">Download for iOS</a>
-                <a href="" class="btn btn--blue section-container-five__btn">Download for Mac</a>
+            <div class="section-five__btn-container">
+                <a href="" class="btn btn--green section-five__btn">Download for iOS</a>
+                <a href="" class="btn btn--blue section-five__btn">Download for Mac</a>
             </div>
         </section>
     </main>
@@ -165,19 +165,19 @@
             <nav class="footer__nav">
                 <ul class="footer__nav-list">
                     <li class="footer__nav-listitem">
-                        <a href="#" class="footer__nav-link">FAQs</a>
+                        <a href="#" class="footer__nav-list-link">FAQs</a>
                     </li>
                     <li class="footer__nav-listitem">
-                        <a href="#" class="footer__nav-link">Contact Us</a>
+                        <a href="#" class="footer__nav-list-link">Contact Us</a>
                     </li>
                     <li class="footer__nav-listitem">
-                        <a href="#" class="footer__nav-link">Privacy Policy</a>
+                        <a href="#" class="footer__nav-list-link">Privacy Policy</a>
                     </li>
                     <li class="footer__nav-listitem">
-                        <a href="#" class="footer__nav-link">Press Kit</a>
+                        <a href="#" class="footer__nav-list-link">Press Kit</a>
                     </li>
                     <li class="footer__nav-listitem">
-                        <a href="#" class="footer__nav-link">Install Guide</a>
+                        <a href="#" class="footer__nav-list-link">Install Guide</a>
                     </li>
                 </ul>
             </nav>
