styled the skip-to-content button above the header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">    
 </head>
 <body>
-    <!-- <a href="#main-content" class="btn skip-btn">Skip to Content</a> -->
+    <a href="#main-content" class="skip-btn">Skip to Content</a>
     <header class="header">
         <img src="./assets/images/logo.svg" alt="Clipboard" aria-label="Home-Clipboard" class="header__logo">
         <div class="header__content">
